added countdown, exit button, more dumb things to the character race and class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ set(HEADERS
         src/stats_page.cpp
         src/progress_bar.h
         src/logger.h
+        src/globals.h
 )
 
 # Add executable
